인덱스 캘린더 변경, 일정 수정, 일정 삭제

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,7 +80,7 @@
 		<div id='calendar' style="width: 70%;"></div>
 	</div>
 
-	<!-- 캘린더 추가 모달 -->
+	<!-- 캘린더 모달 -->
 	<div class="modal fade" id="calendarModal" tabindex="-1">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -108,15 +108,14 @@
 							<label class="col-sm-2 col-form-label">색상</label>
 							<div class="col-sm-10">
 								<select class="mt-2" name="color" id="calendar-color">
-									<option value="#D25565" style="color:#D25565;">빨간색</option>
-									<option value="#9775fa" style="color:#9775fa;">보라색</option>
-									<option value="#ffa94d" style="color:#ffa94d;">주황색</option>
-									<option value="#74c0fc" style="color:#74c0fc;">파란색</option>
-									<option value="#f06595" style="color:#f06595;">핑크색</option>
-									<option value="#63e6be" style="color:#63e6be;">연두색</option>
-									<option value="#a9e34b" style="color:#a9e34b;">초록색</option>
-									<option value="#4d638c" style="color:#4d638c;">남색</option>
-									<option value="#495057" style="color:#495057;">검정색</option>
+									<option value="#e53935" style="color:#e53935;">빨간색</option>
+									<option value="#ffa000" style="color:#ffa000;">주황색</option>
+									<option value="#ffeb3b" style="color:#fff263;">노란색</option>
+									<option value="#aed581" style="color:#aed581;">연두색</option>
+									<option value="#689f38" style="color:#689f38;">초록색</option>
+									<option value="#42a5f5" style="color:#42a5f5;">파란색</option>
+									<option value="#ab47bc" style="color:#ab47bc;">보라색</option>
+									<option value="#9e9e9e" style="color:#9e9e9e;">회색</option>						
 								</select>
 							</div>
 						</div>
@@ -149,7 +148,7 @@
 
 		</div>
 	</div>
-	<!-- 이벤트 추가 모달 -->
+	<!-- 일정 모달 -->
 	<div class="modal fade" id="eventModal" tabindex="-1">
 		<div class="modal-dialog">
 			<div class="modal-content">
