일정 끝나는 날짜 조정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -211,6 +211,7 @@
 </body>
 
 <script src="/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="/moment/min/moment.min.js"></script>
 <script src='/fullcalendar/main.js'></script>
 <script src='/javascripts/main.js'></script>
 <script src='/javascripts/calendar.js'></script>
