--- a/public/stylesheets/font.css
+++ b/public/stylesheets/font.css
@@ -2,7 +2,18 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 500;
 }
-.noto-font{
+
+.noto-font {
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500;
+}
+
+a {
+    color:#000000; 
+    text-decoration:none !important; 
+}
+a:hover {
+    color:#00A0C6; 
+    text-decoration:none; 
+    cursor:pointer;  
 }
