--- a/views/calendar_search.ejs
+++ b/views/calendar_search.ejs
@@ -14,11 +14,13 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 </head>
+
 <body>
     <%- include('header.ejs')%>
     <div>
         <h2 class="noto-font text-center mt-5 mb-2">' <%= keyword %> ' 검색 결과</h2>
         <p class="noto-font text-center mb-2">캘린더명과 캘린더 설명에 검색어가 포함된 경우, 공개 캘린더만 해당</p>
+        <p class="noto-font text-center mb-2">미리보기 후 캘린더를 추가하세요.</p>
         <hr>
     </div>
     <div class='d-flex justify-content-evenly mt-2'>
@@ -28,20 +30,20 @@
                 <thead>
                     <tr>
                         <th scope="col" class="col-sm-1 text-center">캘린더명</th>
-                        <th scope="col" class="col-3 text-center">설명</th>
-                        <th scope="col" class="col-sm-1 text-center">일정수</th>
+                        <th scope="col" class="col-1 text-center">설명</th>
                         <th scope="col" class="col-sm-1 text-center">추가</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% calendars.forEach(function(item){ %>
-                        <tr>
-                            <td class="text-center"><%= item.title %></td>
-                            <td><%= item.description %></td>
-                            <td class="text-center"><%= item.event_count %></td>
-                            <td class="text-center"><i class="fa fa-calendar-plus-o" aria-hidden="true"></i><i class="fa fa-calendar-minus-o" aria-hidden="true"></i></td>
-                        </tr>
-                        <% }) %>
+                    <tr>
+                        <td class="text-center"><a href="/calendar/<%= item.calendar_id %>" target="_blank"><%= item.title %>
+                        </a></td>
+                        <td><a href="/calendar/<%= item.calendar_id %>" target="_blank"><%= item.description %></a></td>
+                        <td class="text-center"><i class="fa fa-calendar-plus-o" aria-hidden="true"></i><i
+                                class="fa fa-calendar-minus-o" aria-hidden="true"></i></td>
+                    </tr>
+                    <% }) %>
                 </tbody>
             </table>
         </div>
