--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,7 @@
             <a class="navbar-brand ms-5 me-3" href="/">Share Calendar</a>
             <div class="collapse navbar-collapse">
                 <form class="d-flex" action="/calendar/search" method="GET">
-                    <input class="form-control me-3" name="keyword" type="search" placeholder="캘린더를 검색하세요.">
+                    <input class="form-control me-3" name="keyword" type="search" placeholder="'테스트'라고 검색해보세요.">
                     <button type="submit" class="btn btn-outline-success me-3" >Search</button>
                     <div id="suggestion-box"></div>
                 </form>
