캘린더 미리보기 완료

--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -19,6 +19,7 @@
 
 <body>
     <%- include('header.ejs')%>
+    <input type="hidden" id="calendar-id" value="<%= calendarId %>">
     <div class='d-flex justify-content-evenly mt-4'>
         <div id='preview-calendar' style="width: 70%;"></div>
     </div>
