--- a/views/join.ejs
+++ b/views/join.ejs
@@ -13,7 +13,7 @@
 		href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Noto+Sans+KR:wght@300;400&display=swap"
 		rel="stylesheet">
     <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-    <title>Sign Up</title>
+    <title>회원가입</title>
 </head>
 
 <body>
