--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,3 +7,8 @@
     font-family: 'Noto Sans KR', sans-serif;
     font-weight: 500;
 }
+
+.text-direction-down{
+    writing-mode: vertical-rl;
+    text-orientation: mixed;
+}
