--- a/views/calendar.ejs
+++ b/views/calendar.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>캘린더 미리보기</title>
     <!--stylesheets-->
-    <link rel='stylesheet' href="/stylesheets/font.css" />
+    <link rel='stylesheet' href="/stylesheets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
