--- a/views/calendar_search.ejs
+++ b/views/calendar_search.ejs
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>'<%=keyword%>' 검색결과</title>
-    <link rel='stylesheet' href="/stylesheets/font.css" />
+    <link rel='stylesheet' href="/stylesheets/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
