--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,13 +3,13 @@
 
 <head>
 	<meta charset='utf-8' />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--stylesheets-->
-	<link rel='stylesheet' href="/stylesheets/font.css" />
+	<link rel='stylesheet' href="/stylesheets/style.css" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="stylesheet"
-		href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Noto+Sans+KR:wght@300;400&display=swap"
-		>
+		href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&family=Noto+Sans+KR:wght@300;400&display=swap">
 	<link rel='stylesheet' href='/fullcalendar/main.css' />
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
 	<title>Share Calendar</title>
@@ -28,56 +28,64 @@
 	<% } else { %>
 	<input type="hidden" class="login-check" value="noLogin">
 	<% } %>
-
 	<%- include('header.ejs')%>
+
 	<!--본문 flex row-->
-	<div class='d-flex justify-content-evenly mt-4'>
-		<!--왼쪽 캘린더 리스트 부분-->
-		<div class="list-group m" style="width:230px">
-			<div class="modal-header">
-				<p class="fw-bold fs-5 text-start m-0">캘린더 목록</p>
-				<button type="button" class="btn btn-outline-secondary" onclick="createCalendar()">+</button>
+	<div class='d-flex mt-4'>
+		<!-- toggler -->
+		<button class="btn float-end me-5" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" role="button">
+			<span class="noto-sans text-direction-down">Calendar List</span>
+		</button>
+		<div class="offcanvas offcanvas-start w-20" id="offcanvas" data-bs-backdrop="false">
+			<div class="offcanvas-header">
+				<h6 class="offcanvas-title d-none d-sm-block" id="offcanvas">Calendar List</h6>
+				<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
 			</div>
-			<ul class="list-group">
-				<% if(isAuthenticated){ 
-					calendars.forEach(function(item){%>
-				<li class="list-group-item">
-					<div class="form-check form-switch ">
-						<input class="form-check-input" type="checkbox" id="<%= item.calendar_id %>"
-							onclick="changeVisible('<%= item.calendar_id %>')">
-						<label class="form-check-label" onclick="editCalendar('<%= item.calendar_id %>')"
-							style="cursor:pointer"><%= item.title %></label>
-					</div>
-				</li>
-				<% }) %>
-				<!--visible 표시하는 script-->
-				<script>
-					const visibles = JSON.parse('<%- JSON.stringify(visibles) %>');
-					const calendarList = JSON.parse('<%- JSON.stringify(calendars) %>');
-					for (let i = 0; i < "<%= calendars.length %>"; i++) {
-						let calendarId = calendarList[i].calendar_id;
-						if (visibles[i].visible == 'true') {
-							$('#' + calendarId).prop('checked', true);
-						} else {
-							$('#' + calendarId).prop('checked', false);
+			<div class="offcanvas-body px-0">
+				<ul class="list-group">
+					<li class="list-group-item" onclick="createCalendar()" style="cursor: pointer;">캘린더 추가</li>
+					<% if(isAuthenticated){ 
+		calendars.forEach(function(item){%>
+					<li class="list-group-item">
+						<div class="form-check form-switch ">
+							<input class="form-check-input" type="checkbox" id="<%= item.calendar_id %>"
+								onclick="changeVisible('<%= item.calendar_id %>')">
+							<label class="form-check-label" onclick="editCalendar('<%= item.calendar_id %>')"
+								style="cursor:pointer"><%= item.title %></label>
+						</div>
+					</li>
+					<% }) %>
+					<!--visible 표시하는 script-->
+					<script>
+						const visibles = JSON.parse('<%- JSON.stringify(visibles) %>');
+						const calendarList = JSON.parse('<%- JSON.stringify(calendars) %>');
+						for (let i = 0; i < "<%= calendars.length %>"; i++) {
+							let calendarId = calendarList[i].calendar_id;
+							if (visibles[i].visible == 'true') {
+								$('#' + calendarId).prop('checked', true);
+							} else {
+								$('#' + calendarId).prop('checked', false);
+							}
 						}
-					}
-				</script>
-				<% } else { %>
-				<%calendars.forEach(function(item){%>
-				<li class="list-group-item">
-					<div class="form-check form-switch ">
-						<input class="form-check-input" type="checkbox" id="<%= item.calendar_id %>" checked disabled>
-						<label class="form-check-label"><%= item.title %></label>
-					</div>
-				</li>
-				<% }) %>
-				<% } %>
-			</ul>
+					</script>
+					<% } else { %>
+					<%calendars.forEach(function(item){%>
+					<li class="list-group-item">
+						<div class="form-check form-switch ">
+							<input class="form-check-input" type="checkbox" id="<%= item.calendar_id %>" checked
+								disabled>
+							<label class="form-check-label"><%= item.title %></label>
+						</div>
+					</li>
+					<% }) %>
+					<% } %>
+				</ul>
+
+			</div>
 		</div>
 
 		<!--캘린더-->
-		<div id='calendar' style="width: 70%;"></div>
+		<div id='calendar' style="width: 90%;"></div>
 	</div>
 
 	<!-- 캘린더 모달 -->
@@ -115,7 +123,7 @@
 									<option value="#689f38" style="color:#689f38;">초록색</option>
 									<option value="#42a5f5" style="color:#42a5f5;">파란색</option>
 									<option value="#ab47bc" style="color:#ab47bc;">보라색</option>
-									<option value="#9e9e9e" style="color:#9e9e9e;">회색</option>						
+									<option value="#9e9e9e" style="color:#9e9e9e;">회색</option>
 								</select>
 							</div>
 						</div>
