라우터 controller 분리

--- a/views/calendar_search.ejs
+++ b/views/calendar_search.ejs
@@ -48,7 +48,7 @@
                                 class="link-primary" target="_blank"><%= item.title %></a></td>
                         <td class="align-middle"><%= item.description %></td>
                         <td class="text-center align-middle"><button class="btn btn-success"
-                                onclick="addCalendar('<%= item.calendar_id %>')">추가</button></td>
+                                onclick="subscribeCalendar('<%= item.calendar_id %>')">추가</button></td>
                     </tr>
                     <% }) %>
                 </tbody>
