카카오 로그인 구현 완료

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -57,9 +57,10 @@
                             <input type="password" class="form-control" name="password" required>
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <a class="btn btn-secondary" href="/user/join">Sign up</a>
-                        <button type="submit" class="btn btn-primary">Login</button>
+                    <div class="d-flex flex-md-column">
+                        <button type="submit" class="btn btn-primary btn-lg col align-self-center mb-2" style="width:300px; height: 45px;">Login</button>
+                        <a class="col align-self-center mb-2" href="/user/kakao"><img src="/images/kakao_login_medium_wide.png"></a>
+                        <a class="btn btn-secondary col-md-7 col align-self-center mb-3" href="/user/join" style="width:300px; height: 45px;">Sign up</a>
                     </div>
                 </form>
             </div>
